cabal-version:      2.4
name:               learn-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             realth000
maintainer:         a598919335@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable learn-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Chapter7.Geometry, Chapter8.MyDataType

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
